--- a/index.html
+++ b/index.html
@@ -52,32 +52,32 @@
             </div>
 
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-lg-5">
+                <ul class="navbar-nav ms-lg-6">
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#Inicio">Inicio</a>
+                        <a class="nav-link click-scroll" href="#inicio">inicio</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#About">Sobre Mí</a>
+                        <a class="nav-link click-scroll" href="#about">Sobre Mí</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#Service">Servicios</a>
+                        <a class="nav-link click-scroll" href="#service">Servicios</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#Project">Proyectos</a>
+                        <a class="nav-link click-scroll" href="#project">Proyectos</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#Contact">Contacto</a>
+                        <a class="nav-link click-scroll" href="#contact">Contacto</a>
                     </li>
                 </ul>
 
                 <div class="d-lg-flex align-items-center d-none ms-auto">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
                     <a class="custom-btn btn" href="tel:3013144023">
-                        +57 3013144203
+                        3013144203
                     </a>
                 </div>
             </div>
@@ -87,7 +87,7 @@
 
     <main>
 
-        <section class="hero d-flex justify-content-center align-items-center" id="section_1">
+        <section class="hero d-flex justify-content-center align-items-center" id="section_inicio">
             <div class="container">
                 <div class="row">
 
@@ -99,7 +99,7 @@
                             </div>
 
                             <h2 class="mb-4">Soy Full Stack Developer</h2>
-                            <p class="mb-4"><a class="custom-btn btn custom-link" href="#About">Saber Más</a></p>
+                            <p class="mb-4"><a class="custom-btn btn custom-link" href="#section_about">Saber Más</a></p>
                         </div>
                     </div>
 
@@ -120,7 +120,7 @@
         </section>
 
 
-        <section class="about section-padding" id="section_2">
+        <section class="about section-padding" id="section_about">
             <div class="container">
                 <div class="row">
 
@@ -154,7 +154,7 @@
         </section>
 
 
-        <section class="services section-padding" id="section_3">
+        <section class="services section-padding" id="section_service">
             <div class="container">
                 <div class="row">
 
@@ -173,10 +173,8 @@
                                     <p>Creacíon de aplicaciones web que comprenden desde simples sitios estáticos
                                         hasta aplicaciones web dinámicas que utilizan las tecnologías web más recientes.
                                     </p>
-
-                                    <a href="#Contact" class="custom-btn custom-border-btn btn mt-3">Contratar
-                                        servicio</a>
-
+                                    <a class="custom-btn btn custom-link" href="#section_contact">Contratar</a>
+                                    
                                     <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                         <i class="services-icon bi-globe"></i>
                                     </div>
@@ -191,9 +189,7 @@
 
                                     <p>Creación, diseño, despliegue y compatibilidad de software. Todo hecho a medida.
                                     </p>
-
-                                    <a href="#Contact" class="custom-btn custom-border-btn btn mt-3">Contratar
-                                        servicio</a>
+                                    <a class="custom-btn btn custom-link" href="#section_contact">Contratar</a>
 
                                     <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                         <i class="services-icon bi-lightbulb"></i>
@@ -209,9 +205,7 @@
 
                                     <p>Evaluación y verificación de los productos o aplicaciónes de software (Pruebas
                                         funcionales,Pruebas de usabilidad,Pruebas de APIs).</p>
-
-                                    <a href="#Contact" class="custom-btn custom-border-btn btn mt-3">Contratar
-                                        servicio</a>
+                                        <a class="custom-btn btn custom-link" href="#section_contact">Contratar</a>
 
                                     <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                         <i class="services-icon bi-phone"></i>
@@ -227,9 +221,9 @@
 
                                     <p>Creamos todo tipo desde Aplicaciones dedes apps de comercio móvil,
                                         entretenimiento, hasta apps de utilidad. </p>
-                                    <a href="#Contact" class="custom-btn custom-border-btn btn mt-3">Contratar
-                                        servicio</a>
 
+                                        <a class="custom-btn btn custom-link" href="#section_contact">Contratar</a>
+                                
                                     <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                         <i class="services-icon bi-google"></i>
                                     </div>
@@ -242,7 +236,7 @@
         </section>
 
 
-        <section class="projects section-padding" id="section_4">
+        <section class="projects section-padding" id="section_project">
             <div class="container">
                 <div class="row">
 
@@ -305,7 +299,7 @@
             </div>
         </section>
 
-        <section class="contact section-padding" id="section_5">
+        <section class="contact section-padding" id="section_contact">
             <div class="container">
                 <div class="row">
 
