--- a/index.html
+++ b/index.html
@@ -475,8 +475,7 @@
                 <div class="col-lg-12 col-12">
                     <div class="copyright-text-wrap">
                         <p class="mb-0">
-                            <span class="copyright-text">Copyright © 2022 <a href="/index.html">Jairvillalobos</a>
-                                Reservados todos los derechos.</span>
+                            <span class="copyright-text">Copyright © 2022 <a href="/index.html"> Jairvillalobos</a> Reservados todos los derechos.</span>
                         </p>
                     </div>
                 </div>
