--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <a href="index.html" class="navbar-brand mx-auto mx-lg-0">Jairvillalobos</a>
+            <a href="/" class="navbar-brand mx-auto mx-lg-0">Jairvillalobos</a>
 
             <div class="d-flex align-items-center d-lg-none">
                 <i class="navbar-icon bi-telephone-plus me-3"></i>
@@ -219,7 +219,7 @@
                                         <h3 class="mb-0">Desarrollo Mobile</h3>
                                     </div>
 
-                                    <p>Creamos todo tipo desde Aplicaciones dedes apps de comercio móvil,
+                                    <p>Creamos todo tipo de aplicaciones desde apps de comercio móvil,
                                         entretenimiento, hasta apps de utilidad. </p>
 
                                         <a class="custom-btn btn custom-link" href="#section_contact">Contratar</a>
@@ -441,7 +441,7 @@
                                     </div>
                                     <div class="message">
                                         <div class="success" id="success">
-                                            ¡Tu mensaje ha sido enviado exitosamente!
+                                            ¡Mensaje enviado exitosamente!
                                         </div>
                                         <div class="danger" id="danger">Ocurrió un error Tu mensaje no pudo ser enviado
                                         </div>
@@ -475,7 +475,7 @@
                 <div class="col-lg-12 col-12">
                     <div class="copyright-text-wrap">
                         <p class="mb-0">
-                            <span class="copyright-text">Copyright © 2022 <a href="/index.html"> Jairvillalobos</a> Reservados todos los derechos.</span>
+                            <span class="copyright-text"><strong>© Jairvillalobos</strong><a href="/"> 2022</a></span>
                         </p>
                     </div>
                 </div>
