--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Jair villalobos Full Stack Developer">
+    <meta name="description" content="Jair villalobos Full Stack Developer Django & ReactJS">
     <meta name="author" content="Jair Villalobos">
 
-    <title>Jairvillalobos | Full Stack Developer</title>
+    <title>Jairvillalobos | Full Stack Developer Django & ReactJS</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -98,7 +98,7 @@
                                 <h1 class="hero-title mb-0">Hola Mundo!</h1>
                             </div>
 
-                            <h2 class="mb-4">Soy Full Stack Developer</h2>
+                            <h2 class="mb-4">Soy Full Stack Developer Django & ReactJS</h2>
                             <p class="mb-4"><a class="custom-btn btn custom-link" href="#section_about">Saber Más</a></p>
                         </div>
                     </div>
