add section skills and new style color

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <link href="css/magnific-popup.css" rel="stylesheet">
 
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
 </head>
 
@@ -130,20 +130,16 @@
 
                             <h3 class="pt-2 mb-3">Un poco sobre Jair</h3>
 
-                            <p>Soy un joven emprendedor apasionado por la programación y
-                                las pruebas de software. Tengo experiencia en el desarrollo e implementación
-                                de aplicaciones de software para ambientes Windows y ambientes Web,
-                                tengo una sólida experiencia en HTML,
-                                CSS y JavaScript, y soy competente en
-                                Java, Python, Spring Framework,
-                                Angular, React y PHP. Poseó experiencia
-                                en el marco de desarrollo web, Django.
-                                Además, tengo un buen conocimiento de
-                                las tecnologías de bases de datos,
-                                MySQL y PostgreSQL.</p>
+                            <p>Soy un joven apasionado por la programación y las pruebas de software. 
+                                Tengo 5 años experiencia de manera autodidacta en el desarrollo e 
+                                implementación de aplicaciones para ambientes Web,
+                                he adquirido un buen conocimiento de las tecnologías de bases de datos, 
+                                soy un ser honesto, con un alto grado de compromiso y responsabilidad, 
+                                me caracterizan la creatividad  y el ser analítico, capas de dar solución 
+                                a  aproblemáticas complejas en él área de TI.</p>
 
                             
-                            <h3 class="pt-3 mb-4">Mis Habilidades</h3>
+                            <h3 class="pt-3 mb-4">Mis habilidades</h3>
                             
                             <div class="col-md-12">
                                 <div class="skillbar" data-percent="30%">
