--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                                         href="https://www.linkedin.com/in/jair-villalobos-b06ba621b/" target="_blank"
                                         class="social-icon-link bi-linkedin"></a></li>
 
-                                <li class="social-icon-item"><a href="https://github.com/jairvillalobos" target="_blank"
+                                <li class="social-icon-item"><a href="https://github.com/mfs-jairvillalobos" target="_blank"
                                         class="social-icon-link bi-github"></a></li>
 
                                 <li class="social-icon-item"><a href="https://api.whatsapp.com/send?phone=573013144203"
