--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         <!-- Border -->
         <br>
         <a class="inline-block rounded-full border border-cyan-600 px-12 py-4 text-sm font-medium text-cyan-600 hover:bg-cyan-600 hover:text-white focus:outline-none focus:ring active:bg-cyan-500"
-          href="https://drive.google.com/uc?id=1Y9xMrhDiDpx6yeT2L8sgZFm41UOhBT3N&export=download">
+          href="./docs/cv-jairvillalobos.es.en.pdf" target="_blank">
           Download CV
         </a>
 
