--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Button CV -->
         <a data-translate="btncv"
           class="mt-4 inline-block rounded-full border border-cyan-600 px-12 py-4 text-sm font-medium text-cyan-600 hover:bg-cyan-600 hover:text-white focus:outline-none focus:ring active:bg-cyan-500"
-          href="./docs/cv-jairvillalobos.pdf" target="_blank">
+          href="./docs/CV-JAIRVILLALOBOS.pdf" target="_blank">
           Download CV
         </a>
       </div>
