--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
 
         <ul class="flex justify-center gap-6 mt-8 sm:mt-0 lg:justify-end">
           <li>
-            <a href="https://github.com/mfs-jairvillalobos" rel="noreferrer" target="_blank"
+            <a href="https://github.com/jairvillalobos" rel="noreferrer" target="_blank"
               class="text-gray-700 transition hover:opacity-75">
               <span class="sr-only">GitHub</span>
 
