--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="./css/custom.css" rel="stylesheet" />
   <title>Jair Villalobos | Website</title>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
@@ -354,7 +355,7 @@
       </div>
 
       <div class="mt-12 text-center">
-        <a href="https://github.com/mfs-jairvillalobos" target="_blank"
+        <a href="https://github.com/jairvillalobos" target="_blank"
           class="inline-flex items-center gap-2 rounded-full rounded bg-sky-900 px-12 py-3 text-lg font-medium text-white transition hover:bg-sky-900 focus:outline-none focus:ring focus:ring-white-400">
           <p data-translate="btngithub">See more in Github</p>
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-4 w-4">
@@ -912,6 +913,7 @@
           </div>
         </div>
       </div>
+      <div class="g-recaptcha" data-sitekey="6LcHgmAoAAAAABqzvM_8kfHjolbeYxOHn2ogAX6d"></div>
     </form>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">emailjs.init('q8T-AVyWr8tG1LEU4')</script>
