fix form to reCAPTCHA

--- a/index.html
+++ b/index.html
@@ -909,8 +909,8 @@
           data-translate="btnsend">
         <div class="message">
           <div class="success" id="success" data-translate="smsSuccess"></div>
-          <div class="danger" id="danger" data-translate="smsError">An error occurred Your message could not be sent
-          </div>
+          <div class="danger" id="danger" data-translate="smsError"></div>
+          <div class="danger" id="dangerreCAPTCHA" data-translate="recaptchaError"></div>
         </div>
       </div>
       <div class="g-recaptcha" data-sitekey="6LcHgmAoAAAAABqzvM_8kfHjolbeYxOHn2ogAX6d"></div>
