--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="mx-auto max-w-3xl text-center">
         <h1
           class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent sm:text-5xl">
-          <span data-translate="tagline" class="sm:blocka">I am a software developer</span>
+          <span data-translate="tagline" class="sm:blocka">I am a Back-End Developer</span>
         </h1>
         <p id="typewriter" class="typewriter mx-auto mt-4 max-w-xl sm:text-xl sm:leading-relaxed"></p>
 
