--- a/index.html
+++ b/index.html
@@ -75,16 +75,13 @@
         </summary>
 
         <p data-translate="pworkExperience" class="mt-4 leading-relaxed text-gray-700">
-          As a software developer with over 5 years of experience, I have gained expertise in a variety of technologies
-          and frameworks.
-          In my current role, I have worked with Go 🦫, FastAPI 🚀, the KrakenD framework 🐙, and AWS ☁️, and have
-          developed components using Flutter 🦋 for about 10 months. My knowledge in these areas has allowed me to
-          create efficient and scalable solutions for my clients, using best practices and agile methodologies.
-          In addition to my current role, I have extensive experience with Python 3 🐍, Django 🦄, GNU/Linux 🐧, DRF 📡,
-          Docker 🐳, PostgreSQL 🐘, and MySQL 🐬.
-          I am also proficient in using GitHub 🐱 for version control and collaboration. Furthermore,
-          I am an apprentice of Go 🦫 and React.js ⚛️, constantly striving to expand my skill set and stay up-to-date
-          with the latest technologies.
+          More than 5 years of experience in full stack software development. Specialist in REST APIs, databases and languages such as React, Golang and Python. Knowledge in IT technical support.
+
+Design and implementation of scalable RESTful APIs with focus on performance, security and best practices. Integration with API Gateways through plugin development.
+
+Integral participation in the lifecycle of high traffic web and mobile applications. Agile methodologies.
+
+Commitment to continuous learning and professional growth. Focus on delivering high value technology solutions that enhance business success.
         </p>
       </details>
 
