--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </summary>
 
         <p data-translate="pworkExperience" class="mt-4 leading-relaxed text-gray-700">
-          More than 5 years of experience in full stack software development. Specialist in REST APIs, databases and languages such as React, Golang and Python. Knowledge in IT technical support.
+          More than 5 years of experience in back-end development. Specialist in REST APIs, databases and languages such as React, Golang and Python. Knowledge in IT technical support.
 
 Design and implementation of scalable RESTful APIs with focus on performance, security and best practices. Integration with API Gateways through plugin development.
 
