update about and remove cv

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
       <div class="mx-auto max-w-3xl text-center">
         <h1
           class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent sm:text-3xl">
-          <span data-translate="tagline" class="sm:blocka">Full Stack Engineer (APIs & Microservices) | Go, Python & TypeScript | AWS, Docker, Kubernetes | Security Enthusiast</span>
+          <span data-translate="tagline" class="sm:blocka">Full Stack Engineer (APIs & Microservices) | Go, Python &
+            TypeScript | AWS, Docker, Kubernetes | Security Enthusiast</span>
         </h1>
 
         <!-- Button CV -->
@@ -74,13 +75,16 @@
         </summary>
 
         <p data-translate="pworkExperience" class="mt-4 leading-relaxed text-gray-700">
-          More than 5 years of experience in back-end development. Specialist in REST APIs, databases and languages such as React, Golang and Python. Knowledge in IT technical support.
+          More than 5 years of experience in Full Stack development. Specialist in REST APIs, databases and languages
+          such as React, Golang and Python. Knowledge in IT technical support.
 
-Design and implementation of scalable RESTful APIs with focus on performance, security and best practices. Integration with API Gateways through plugin development.
+          Design and implementation of scalable RESTful APIs with focus on performance, security and best practices.
+          Integration with API Gateways through plugin development.
 
-Integral participation in the lifecycle of high traffic web and mobile applications. Agile methodologies.
+          Integral participation in the lifecycle of high traffic web and mobile applications. Agile methodologies.
 
-Commitment to continuous learning and professional growth. Focus on delivering high value technology solutions that enhance business success.
+          Commitment to continuous learning and professional growth. Focus on delivering high value technology solutions
+          that enhance business success.
         </p>
       </details>
 
@@ -142,7 +146,8 @@ Commitment to continuous learning and professional growth. Focus on delivering h
       </div>
 
       <div class="mt-8 grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
-        <article class="rounded-xl bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 p-0.5 shadow-xl transition hover:bg-[length:400%_400%] hover:shadow-sm hover:[animation-duration:_4s]">
+        <article
+          class="rounded-xl bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 p-0.5 shadow-xl transition hover:bg-[length:400%_400%] hover:shadow-sm hover:[animation-duration:_4s]">
           <div class="rounded-[10px] bg-white p-4 !pt-20 sm:p-6">
             <h3 class="font-bold uppercase text-gray-900 p-2 text-left">
               <a href="https://tigomoney.com/gt/home-gt" data-translate="todoAppTitle" target="_blank">
@@ -150,51 +155,64 @@ Commitment to continuous learning and professional growth. Focus on delivering h
             </h3>
             <hr>
             <p data-translate="todoAppDescription" class="mt-0.5 text-sm font-medium text-gray-900 p-2">
-              Tigo Money, an innovative digital wallet that allows users to make transactions quickly and securely from their mobile devices.
+              Tigo Money, an innovative digital wallet that allows users to make transactions quickly and securely from
+              their mobile devices.
             </p>
             <div class="mt-4 flex flex-wrap gap-1">
               <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">Go</span>
-              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">KrakenD API Gateway</span>
-              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">Amazon Web Services (AWS)</span>
+              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">KrakenD
+                API Gateway</span>
+              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">Amazon
+                Web Services (AWS)</span>
             </div>
           </div>
         </article>
 
-        <article class="rounded-xl bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 p-0.5 shadow-xl transition hover:bg-[length:400%_400%] hover:shadow-sm hover:[animation-duration:_4s]">
+        <article
+          class="rounded-xl bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 p-0.5 shadow-xl transition hover:bg-[length:400%_400%] hover:shadow-sm hover:[animation-duration:_4s]">
           <div class="rounded-[10px] bg-white p-4 !pt-20 sm:p-6">
             <h3 class="font-bold uppercase text-gray-900 p-2 text-left">
-              <a href="https://jairvillalobos-rickandmorty-client.netlify.app/" data-translate="rickandmortyClientTitle" target="_blank">Rickandmorty Client</a>
+              <a href="https://jairvillalobos-rickandmorty-client.netlify.app/" data-translate="rickandmortyClientTitle"
+                target="_blank">Rickandmorty Client</a>
             </h3>
             <hr>
             <p data-translate="rickandmortyClientDescription" class="mt-0.5 text-sm font-medium text-gray-900 p-2">
               A client using React js and Styled Components to consume the Rick and Morty GraphQL API.
             </p>
             <div class="mt-4 flex flex-wrap gap-1">
-              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">React js</span>
-              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">Styled Components</span>
-              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">Rick and Morty GraphQL API</span>
+              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">React
+                js</span>
+              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">Styled
+                Components</span>
+              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">Rick and
+                Morty GraphQL API</span>
             </div>
           </div>
         </article>
 
-        <article class="rounded-xl bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 p-0.5 shadow-xl transition hover:bg-[length:400%_400%] hover:shadow-sm hover:[animation-duration:_4s]">
+        <article
+          class="rounded-xl bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 p-0.5 shadow-xl transition hover:bg-[length:400%_400%] hover:shadow-sm hover:[animation-duration:_4s]">
           <div class="rounded-[10px] bg-white p-4 !pt-20 sm:p-6">
             <h3 class="font-bold uppercase text-gray-900 p-2 text-left">
-              <a href="https://github.com/jairvillalobos/facturaexpress" data-translate="serviceEmployeeTitle" target="_blank">facturaexpress</a>
+              <a href="https://github.com/jairvillalobos/facturaexpress" data-translate="serviceEmployeeTitle"
+                target="_blank">facturaexpress</a>
             </h3>
             <hr>
             <p data-translate="serviceEmployeeDescription" class="mt-0.5 text-sm font-medium text-gray-900 p-2">
-              It is an API written in Go that allows users to create and manage invoices, with fields for company information, services, total value and operator details.
+              It is an API written in Go that allows users to create and manage invoices, with fields for company
+              information, services, total value and operator details.
             </p>
             <div class="mt-4 flex flex-wrap gap-1">
               <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">Go</span>
-              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">Gin</span>
-              <span class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">PostgreSQL</span>
+              <span
+                class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">Gin</span>
+              <span
+                class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600">PostgreSQL</span>
             </div>
           </div>
         </article>
       </div>
-      
+
 
       <div class="mt-12 text-center">
         <a href="https://github.com/jairvillalobos" target="_blank"
