--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="./css/custom.css" rel="stylesheet" />
-  <title>Juan Villalobos Nuñez | Website</title>
+  <title>Juan Jair Villalobos Nuñez | Website</title>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
