--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
           </li>
 
           <li>
-            <a href="https://www.linkedin.com/in/jair-villalobos/" rel="noreferrer" target="_blank"
+            <a href="https://www.linkedin.com/in/juanvillalobonz/" rel="noreferrer" target="_blank"
               class="text-gray-700 transition hover:opacity-75">
               <span class="sr-only">Linkedin</span>
               <svg class="h-5 w-5 text-black" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
