--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           development services?
         </h2>
         <div data-translate="smsDescription" class="text-gray-700 mt-8">
-          My name is Jair Villalobos and I am here to help you. Leave me a message with your needs and I will contact
+          My name is Juan Jair Villalobos Nuñez and I am here to help you. Leave me a message with your needs and I will contact
           you as soon as possible. I hope to have the opportunity to work with you!
         </div>
       </div>
@@ -822,7 +822,7 @@
 
         <ul class="flex justify-center gap-6 mt-8 sm:mt-0 lg:justify-end">
           <li>
-            <a href="https://github.com/jairvillalobos" rel="noreferrer" target="_blank"
+            <a href="https://github.com/juanvillalobosnz" rel="noreferrer" target="_blank"
               class="text-gray-700 transition hover:opacity-75">
               <span class="sr-only">GitHub</span>
 
@@ -835,7 +835,7 @@
           </li>
 
           <li>
-            <a href="https://www.linkedin.com/in/juanvillalobonz/" rel="noreferrer" target="_blank"
+            <a href="https://www.linkedin.com/in/juanvillalobosnz/" rel="noreferrer" target="_blank"
               class="text-gray-700 transition hover:opacity-75">
               <span class="sr-only">Linkedin</span>
               <svg class="h-5 w-5 text-black" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -853,7 +853,5 @@
 
 </body>
 <script src="js/validForm.js"></script>
-<script src="js/typewriter.js"></script>
 <script type="module" src="js/index.js"></script>
-
 </html>
