--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <nav aria-label="Site Nav" class="mx-auto flex max-w-3xl items-center justify-between p-4">
-    <a href="index.html" class="gap-3 text-lg font-medium">Jair Villalobos</a>
+    <a href="index.html" class="gap-3 text-lg font-medium">Juan Jair Villalobos Nuñez</a>
 
     <ul class="flex items-center gap-2 text-sm font-medium text-white-500">
       <li class="hidden lg:block">
@@ -43,8 +43,7 @@
       <div class="mx-auto max-w-3xl text-center">
         <h1
           class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent sm:text-3xl">
-          <span data-translate="tagline" class="sm:blocka">Full Stack Engineer (APIs & Microservices) | Go, Python &
-            TypeScript | AWS, Docker, Kubernetes | Security Enthusiast</span>
+          <span data-translate="tagline" class="sm:blocka">Software Engineer | Backend | Python | Go | TypeScript</span>
         </h1>
 
         <!-- Button CV -->
@@ -75,8 +74,8 @@
         </summary>
 
         <p data-translate="pworkExperience" class="mt-4 leading-relaxed text-gray-700">
-          More than 5 years of experience in Full Stack development. Specialist in REST APIs, databases and languages
-          such as React, Golang and Python. Knowledge in IT technical support.
+          More than 5 years of experience in software development. Specialist in REST APIs, databases and languages
+          such as Python, Golang and TypeScript. Knowledge in IT technical support.
 
           Design and implementation of scalable RESTful APIs with focus on performance, security and best practices.
           Integration with API Gateways through plugin development.
@@ -194,7 +193,7 @@
           class="rounded-xl bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 p-0.5 shadow-xl transition hover:bg-[length:400%_400%] hover:shadow-sm hover:[animation-duration:_4s]">
           <div class="rounded-[10px] bg-white p-4 !pt-20 sm:p-6">
             <h3 class="font-bold uppercase text-gray-900 p-2 text-left">
-              <a href="https://github.com/jairvillalobos/facturaexpress" data-translate="serviceEmployeeTitle"
+              <a href="https://github.com/juanvillalobosnz/facturaexpress" data-translate="serviceEmployeeTitle"
                 target="_blank">facturaexpress</a>
             </h3>
             <hr>
@@ -215,7 +214,7 @@
 
 
       <div class="mt-12 text-center">
-        <a href="https://github.com/jairvillalobos" target="_blank"
+        <a href="https://github.com/juanvillalobosnz" target="_blank"
           class="inline-flex items-center gap-2 rounded-full rounded bg-sky-900 px-12 py-3 text-lg font-medium text-white transition hover:bg-sky-900 focus:outline-none focus:ring focus:ring-white-400">
           <p data-translate="btngithub">See more in Github</p>
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-4 w-4">
